-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.0.0
-
None
-
all
-
1767e21123a6b3d9bfa71027ad42cb16b43f7b4f
This problem means I am unable to package static plugins such as those loaded by QMediaPluginLoader
I understand that most of the time we just use shared plugins, but then QFactoryLoader is inconsistent.
QFactoryLoader::metaData() will return a list of metadata for both static and shared plugins.
But QFactoryLoader::instance(int index) will only ever load shared plugins (it does not look at QLibraryPrivate::staticPlugins() list)
I have attached my fix for this method
| For Gerrit Dashboard: QTBUG-25274 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 24850,1 | Allow loading of static plugins by index | master | qt/qtbase | Status: MERGED | +2 | 0 |